--- a/GeneralClashConfig.yaml
+++ b/GeneralClashConfig.yaml
@@ -8,19 +8,19 @@
 # 混合端口 HTTP和SOCKS5用一个端口
 port: 7890
 socks-port: 7891
+redir-port: 7892
 mixed-port: 7893
+tproxy-port: 7895
 allow-lan: true
 bind-address: '*'
 skip-auth-prefixes:
   - 127.0.0.1/8
   - ::1/128
 ipv6: false
-find-process-mode: strict
-log-level: debug
+find-process-mode: off
+log-level: info
 mode: rule
-external-controller: 0.0.0.0:9090
-external-ui: yacd
-external-ui-url: "https://mirror.ghproxy.com/https://github.com/haishanh/yacd/archive/gh-pages.zipp"
+external-controller: 192.168.50.1:9090
 unified-delay: true
 tcp-concurrent: true
 global-client-fingerprint: chrome
@@ -28,71 +28,26 @@ geodata-loader: standard
 geodata-mode: true
 geo-auto-update: true
 geo-update-interval: 24
-keep-alive-interval: 15
+keep-alive-interval: 60
 geox-url:
   geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
   mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
-  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
+  asn: "https://mirror.ghproxy.com/https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
+
 tun:
   enable: true
-  stack: gvisor # system gvisor mixed
-  dns-hijack:
-    - any:53
-    - tcp://any:53
+  stack: system # system gvisor mixed
   auto-redirect: true
   auto-route: true
-  auto-detect-interface: true
   strict-route: true
   route-exclude-address-set: [cncidr, chinaips]
-  route-exclude-address:
-    - 74.48.160.148/32
-    - 122.224.0.0/12
-    - 119.96.0.0/13
-    - 106.56.0.0/13
-    - 120.133.71.0/24
-    - 163.181.166.0/24
-    - 163.181.164.0/24
-    - 163.181.201.0/24
-    - 163.181.199.0/24
-    - 163.181.42.0/24
-    - 163.181.39.0/24
-    - 47.89.66.0/24
-    - 128.1.157.0/24
-    - 163.181.23.0/24
-    - 163.181.129.0/24
-    - 163.181.81.0/24
-    - 163.181.82.0/24
-    - 163.181.128.0/24
-    - 163.181.160.0/24
-    - 14.112.0.0/12
-    - 183.0.0.0/10
-    - 223.5.5.5/32
-    - 223.6.6.6/32
-    - 119.29.29.29/32
-    - 114.114.114.114/32
-    - 1.12.12.12/32
-    - 180.76.76.76/32
-    - 0.0.0.0/8
-    - 10.0.0.0/8
-    - 100.64.0.0/10
-    - 127.0.0.0/8
-    - 169.254.0.0/16
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 192.0.2.0/24
-    - 192.88.99.0/24
-    - 192.168.0.0/16
-    - 198.18.0.0/15
-    - 198.51.100.0/24
-    - 203.0.113.0/24
-    - ::/127
-    - fc00::/7
-    - fe80::/10
-    - ff00::/8
+  auto-detect-interface: true
+
 profile:
   store-selected: true
   store-fake-ip: false
+  
 dns:
   enable: true
   use-system-hosts: true
@@ -106,16 +61,16 @@ dns:
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "rule-set:direct,mydirect,china,chinax,chinatest": 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "rule-set:github,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
@@ -124,13 +79,38 @@ dns:
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
+      - https://1.12.12.12/dns-query
   nameserver: 
-    - https://223.5.5.5/dns-query#h3=true
-    - https://1.12.12.12/dns-query
+      - quic://223.5.5.5:853
+      - https://1.12.12.12/dns-query
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
-    - "+.*"
+    - "WORKGROUP"
+    - "rule-set:direct"
+    - "rule-set:mydirect"
+    - "rule-set:china"
+    - "rule-set:chinax"
+    - "rule-set:chinatest"
+    - "rule-set:private"
+    - "geosite:private"
+    - "geosite:cn"
+    - "geosite:tld-cn"
+    - "geosite:tracker"
+    - "rule-set:apple"
+    - "rule-set:icloud"
+    - "rule-set:appleall"
+    - "+.cn"
+    - "+.lan"
+    - "+.local"
+    - "*.msftconnecttest.com"
+    - "*.msftncsi.com"
+    - stun.*.*
+    - stun.*.*.*
+    - "+.stun.*.*"
+    - "+.stun.*.*.*"
+    - "+.stun.*.*.*.*"
+    - "+.stun.*.*.*.*.*"
 
 sniffer:
   enable: true
@@ -149,276 +129,310 @@ sniffer:
     - "dlg.io.mi.com"
     - "+.apple.com"
 
+NodeParam: &NodeParam {type: http, interval: 86400, health-check: {enable: true, url: 'http://www.google.com/generate_204', interval: 60}}
+
+proxy-providers: 
+  converter:
+    url: '订阅地址'
+    <<: *NodeParam
+    path: './ProxyProvider/Providers.yaml'
+
+RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
+RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
+RuleSetIpcidr: &RuleSetIpcidr {type: http, behavior: ipcidr, interval: 86400, proxy: DIRECT}
+
 rule-providers:
   reject:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
     path: ./ruleset/reject.yaml
-    interval: 86400
 
   directprocess:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectProcess.list"
     path: ./ruleset/directprocess.yaml
-    interval: 1000
 
   mydirect:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
     path: ./ruleset/mydirect.yaml
-    interval: 1000
 
   myproxy:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list"
     path: ./ruleset/myproxy.yaml
-    interval: 1200
 
   binance:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Binance/Binance_No_Resolve.yaml"
     path: ./ruleset/binance.yaml
-    interval: 86400
 
   mybinance:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list"
     path: ./ruleset/mybinance.yaml
-    interval: 86400
 
   crypto:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
     path: ./ruleset/crypto.yaml
-    interval: 86400
 
   mycrypto:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list"
     path: ./ruleset/mycrypto.yaml
-    interval: 86400
 
   icloud:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/icloud.txt"
     path: ./ruleset/icloud.yaml
-    interval: 86400
 
   apple:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
     path: ./ruleset/apple.yaml
-    interval: 86400
 
   appleall:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
     path: ./ruleset/appleall.yaml
-    interval: 86400
 
   netflix:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml"
     path: ./ruleset/netflix.yaml
-    interval: 86400
 
   youtube:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube_No_Resolve.yaml"
     path: ./ruleset/youtube.yaml
-    interval: 86400
 
   googleFCM:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GoogleFCM/GoogleFCM_No_Resolve.yaml"
     path: ./ruleset/googleFCM.yaml
-    interval: 86400
 
   google:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml"
     path: ./ruleset/google.yaml
-    interval: 86400
 
   openai:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
     path: ./ruleset/openai.yaml
-    interval: 86400
 
   myopenai:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list"
     path: ./ruleset/myopenai.yaml
-    interval: 86400
 
   bahamut:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bahamut/Bahamut_No_Resolve.yaml"
     path: ./ruleset/bahamut.yaml
-    interval: 86400
 
   amazon:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon_No_Resolve.yaml"
     path: ./ruleset/amazon.yaml
-    interval: 86400
 
   onedrive:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive_No_Resolve.yaml"
     path: ./ruleset/onedrive.yaml
-    interval: 86400
 
   microsoft:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml"
     path: ./ruleset/microsoft.yaml
-    interval: 86400
 
   discord:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Discord/Discord_No_Resolve.yaml"
     path: ./ruleset/discord.yaml
-    interval: 86400
 
   twitter:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
     path: ./ruleset/twitter.yaml
-    interval: 86400
 
   tiktok:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok_No_Resolve.yaml"
     path: ./ruleset/tiktok.yaml
-    interval: 86400
 
   github:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub_No_Resolve.yaml"
     path: ./ruleset/github.yaml
-    interval: 86400
 
   proxy:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
     path: ./ruleset/proxy.yaml
-    interval: 86400
 
   china:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_No_Resolve.yaml"
     path: ./ruleset/china.yaml
-    interval: 86400
 
   chinax:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
     path: ./ruleset/chinax.yaml
-    interval: 86400
 
   chinatest:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
     path: ./ruleset/chinatest.yaml
-    interval: 86400
 
   direct:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
     path: ./ruleset/direct.yaml
-    interval: 86400
 
   private:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt"
     path: ./ruleset/private.yaml
-    interval: 86400
 
   gfw:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
     path: ./ruleset/gfw.yaml
-    interval: 86400
 
   global:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
     path: ./ruleset/global.yaml
-    interval: 86400
 
   proxyclassical:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
     path: ./ruleset/proxyclassical.yaml
-    interval: 86400
 
   telegramcidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
     path: ./ruleset/telegramcidr.yaml
-    interval: 86400
 
   cncidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
-    interval: 86400
 
   chinaips:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
     path: ./ruleset/chinaips.yaml
-    interval: 86400
 
   lancidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
     path: ./ruleset/lancidr.yaml
-    interval: 86400
 
   applications:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt"
     path: ./ruleset/applications.yaml
-    interval: 86400
+
+FilterCrypto: &FilterCrypto '^(?=.*((?i)🇸🇬|坡|狮|SG|Singapore|台|新北|彰化|TW|Taiwan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterUS: &FilterUS '^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterTW: &FilterTW '^(?=.*((?i)台湾|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterVPS: &FilterVPS '^(?=.*((?i)0x)).*$'
+
+Select: &Select {type: select, url: 'http://connectivitycheck.platform.hicloud.com/generate_204', disable-udp: false, hidden: false, include-all: true}
+
+proxy-groups: 
+  - {name: 🚀 节点选择, type: select, proxies: [🔥 手动切换, ♻️ 自动选择, DIRECT]}
+  - {name: 🔥 手动切换, type: select, include-all: true}
+  - {name: ♻️ 自动选择, type: url-test, include-all: true, tolerance: 10}
+  - {name: 🅱️ Crypto, <<: *Select, filter: *FilterCrypto}
+  - {name: 🎯 全球直连, type: select, proxies: [DIRECT]}
+  - {name: 🆎 AdBlock, type: select, proxies: [REJECT, DIRECT]}
+  - {name: 🇬 Google, type: select, proxies: [🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 🤖 Chat服务, type: select, proxies: [🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name:  苹果服务, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 📹 油管视频, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 👨‍💻‍ Github, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 📺 巴哈姆特, type: select, proxies: [🇨🇳 台湾节点, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: Ⓜ️ 微软云盘, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: Ⓜ️ 微软服务, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 💬 自由消息, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 🐔 落地鸡, <<: *Select, filter: *FilterVPS}
+  - {name: 🇺🇲 美国节点, <<: *Select, filter: *FilterUS}
+  - {name: 🇨🇳 台湾节点, <<: *Select, filter: *FilterTW}
+
+rules:
+  - RULE-SET,myproxy,🚀 节点选择
+  - RULE-SET,crypto,🅱️ Crypto
+  - RULE-SET,binance,🅱️ Crypto
+  - RULE-SET,mybinance,🅱️ Crypto
+  - RULE-SET,mycrypto,🅱️ Crypto
+  - RULE-SET,directprocess,🎯 全球直连
+  - RULE-SET,mydirect,🎯 全球直连
+  - PROCESS-NAME,android.uid.system,🇬 Google
+  - PROCESS-NAME,com.google.uid.shared,🇬 Google
+  - PROCESS-NAME,com.android.vending,🇬 Google
+  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com,🇬 Google
+  - DOMAIN-SUFFIX,android.googleapis.com,🇬 Google
+  - DOMAIN-SUFFIX,android.clients.google.com,🇬 Google
+  - DOMAIN-SUFFIX,play.googleapis.com,🇬 Google
+  - DOMAIN-SUFFIX,services.googleapis.cn,🇬 Google
+  - DOMAIN-SUFFIX,voice.google.com,🇬 Google
+  - DOMAIN-SUFFIX,dl.google.com,🇬 Google
+  - IP-CIDR,224.0.0.0/4,🎯 全球直连,no-resolve
+  - IP-CIDR,103.41.167.0/24,🎯 全球直连,no-resolve
+  - IP-CIDR,74.48.160.148/32,🎯 全球直连,no-resolve
+  - RULE-SET,openai,🤖 Chat服务
+  - RULE-SET,myopenai,🤖 Chat服务
+  - RULE-SET,applications,🎯 全球直连
+  - DOMAIN,clash.razord.top,🎯 全球直连
+  - DOMAIN,yacd.haishan.me,🎯 全球直连
+  - RULE-SET,private,🎯 全球直连
+  - RULE-SET,icloud, 苹果服务
+  - RULE-SET,apple, 苹果服务
+  - RULE-SET,appleall, 苹果服务
+  - GEOSITE,apple-cn, 苹果服务
+  - RULE-SET,youtube,📹 油管视频
+  - RULE-SET,netflix,📹 油管视频
+  - GEOSITE,youtube,📹 油管视频
+  - GEOIP,netflix,📹 油管视频
+  - RULE-SET,googleFCM,🇬 Google
+  - RULE-SET,google,🇬 Google
+  - GEOSITE,google,🇬 Google
+  - GEOIP,google,🇬 Google
+  - GEOSITE,steam@cn,🎯 全球直连
+  - GEOSITE,category-games@cn,🎯 全球直连
+  - GEOSITE,tracker,🎯 全球直连
+  - RULE-SET,reject,🆎 AdBlock
+  - GEOSITE,category-ads-all,🆎 AdBlock
+  - RULE-SET,bahamut,📺 巴哈姆特
+  - GEOSITE,bahamut,📺 巴哈姆特
+  - RULE-SET,github,👨‍💻‍ Github
+  - GEOSITE,github,👨‍💻‍ Github
+  - RULE-SET,onedrive,Ⓜ️ 微软云盘
+  - GEOSITE,onedrive,Ⓜ️ 微软云盘
+  - RULE-SET,microsoft,Ⓜ️ 微软服务
+  - RULE-SET,telegramcidr,💬 自由消息,no-resolve
+  - RULE-SET,twitter,💬 自由消息
+  - RULE-SET,discord,💬 自由消息
+  - RULE-SET,tiktok,💬 自由消息
+  - GEOSITE,telegram,💬 自由消息
+  - GEOSITE,twitter,💬 自由消息
+  - GEOIP,twitter,💬 自由消息
+  - RULE-SET,gfw,🚀 节点选择
+  - RULE-SET,proxy,🚀 节点选择
+  - RULE-SET,global,🚀 节点选择
+  - RULE-SET,proxyclassical,🚀 节点选择
+  - RULE-SET,china,🎯 全球直连
+  - RULE-SET,chinax,🎯 全球直连
+  - RULE-SET,chinatest,🎯 全球直连
+  - RULE-SET,direct,🎯 全球直连
+  - RULE-SET,lancidr,🎯 全球直连,no-resolve
+  - RULE-SET,cncidr,🎯 全球直连,no-resolve
+  - RULE-SET,chinaips,🎯 全球直连,no-resolve
+  - GEOIP,LAN,🎯 全球直连,no-resolve
+  - GEOIP,CN,🎯 全球直连,no-resolve
+  - MATCH,🎯 全球直连
