--- a/GeneralClashConfig_mac.yaml
+++ b/GeneralClashConfig_mac.yaml
@@ -28,7 +28,7 @@ geodata-loader: standard
 geodata-mode: true
 geo-auto-update: true
 geo-update-interval: 24
-keep-alive-interval: 15
+keep-alive-interval: 60
 geox-url:
   geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
@@ -149,276 +149,310 @@ sniffer:
     - "dlg.io.mi.com"
     - "+.apple.com"
 
+NodeParam: &NodeParam {type: http, interval: 86400, health-check: {enable: true, url: 'http://www.google.com/generate_204', interval: 60}}
+
+proxy-providers: 
+  converter:
+    url: '订阅地址'
+    <<: *NodeParam
+    path: './ProxyProvider/Providers.yaml'
+
+RuleSetDomain: &RuleSetDomain {type: http, behavior: domain, interval: 86400, proxy: DIRECT}
+RuleSetClassical: &RuleSetClassical {type: http, behavior: classical, interval: 86400, proxy: DIRECT}
+RuleSetIpcidr: &RuleSetIpcidr {type: http, behavior: ipcidr, interval: 86400, proxy: DIRECT}
+
 rule-providers:
   reject:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
     path: ./ruleset/reject.yaml
-    interval: 86400
 
   directprocess:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectProcess.list"
     path: ./ruleset/directprocess.yaml
-    interval: 1000
 
   mydirect:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
     path: ./ruleset/mydirect.yaml
-    interval: 1000
 
   myproxy:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list"
     path: ./ruleset/myproxy.yaml
-    interval: 1200
 
   binance:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Binance/Binance_No_Resolve.yaml"
     path: ./ruleset/binance.yaml
-    interval: 86400
 
   mybinance:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list"
     path: ./ruleset/mybinance.yaml
-    interval: 86400
 
   crypto:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
     path: ./ruleset/crypto.yaml
-    interval: 86400
 
   mycrypto:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list"
     path: ./ruleset/mycrypto.yaml
-    interval: 86400
 
   icloud:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/icloud.txt"
     path: ./ruleset/icloud.yaml
-    interval: 86400
 
   apple:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
     path: ./ruleset/apple.yaml
-    interval: 86400
 
   appleall:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
     path: ./ruleset/appleall.yaml
-    interval: 86400
 
   netflix:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml"
     path: ./ruleset/netflix.yaml
-    interval: 86400
 
   youtube:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube_No_Resolve.yaml"
     path: ./ruleset/youtube.yaml
-    interval: 86400
 
   googleFCM:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GoogleFCM/GoogleFCM_No_Resolve.yaml"
     path: ./ruleset/googleFCM.yaml
-    interval: 86400
 
   google:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml"
     path: ./ruleset/google.yaml
-    interval: 86400
 
   openai:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
     path: ./ruleset/openai.yaml
-    interval: 86400
 
   myopenai:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list"
     path: ./ruleset/myopenai.yaml
-    interval: 86400
 
   bahamut:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bahamut/Bahamut_No_Resolve.yaml"
     path: ./ruleset/bahamut.yaml
-    interval: 86400
 
   amazon:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon_No_Resolve.yaml"
     path: ./ruleset/amazon.yaml
-    interval: 86400
 
   onedrive:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive_No_Resolve.yaml"
     path: ./ruleset/onedrive.yaml
-    interval: 86400
 
   microsoft:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml"
     path: ./ruleset/microsoft.yaml
-    interval: 86400
 
   discord:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Discord/Discord_No_Resolve.yaml"
     path: ./ruleset/discord.yaml
-    interval: 86400
 
   twitter:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
     path: ./ruleset/twitter.yaml
-    interval: 86400
 
   tiktok:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok_No_Resolve.yaml"
     path: ./ruleset/tiktok.yaml
-    interval: 86400
 
   github:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub_No_Resolve.yaml"
     path: ./ruleset/github.yaml
-    interval: 86400
 
   proxy:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
     path: ./ruleset/proxy.yaml
-    interval: 86400
 
   china:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_No_Resolve.yaml"
     path: ./ruleset/china.yaml
-    interval: 86400
 
   chinax:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
     path: ./ruleset/chinax.yaml
-    interval: 86400
 
   chinatest:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
     path: ./ruleset/chinatest.yaml
-    interval: 86400
 
   direct:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
     path: ./ruleset/direct.yaml
-    interval: 86400
 
   private:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt"
     path: ./ruleset/private.yaml
-    interval: 86400
 
   gfw:
-    type: http
-    behavior: domain
+    <<: *RuleSetDomain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
     path: ./ruleset/gfw.yaml
-    interval: 86400
 
   global:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
     path: ./ruleset/global.yaml
-    interval: 86400
 
   proxyclassical:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
     path: ./ruleset/proxyclassical.yaml
-    interval: 86400
 
   telegramcidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
     path: ./ruleset/telegramcidr.yaml
-    interval: 86400
 
   cncidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
-    interval: 86400
 
   chinaips:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
     path: ./ruleset/chinaips.yaml
-    interval: 86400
 
   lancidr:
-    type: http
-    behavior: ipcidr
+    <<: *RuleSetIpcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
     path: ./ruleset/lancidr.yaml
-    interval: 86400
 
   applications:
-    type: http
-    behavior: classical
+    <<: *RuleSetClassical
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt"
     path: ./ruleset/applications.yaml
-    interval: 86400
+
+FilterCrypto: &FilterCrypto '^(?=.*((?i)🇸🇬|坡|狮|SG|Singapore|台|新北|彰化|TW|Taiwan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterUS: &FilterUS '^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterTW: &FilterTW '^(?=.*((?i)台湾|(\b(TW|Taiwan)\b)))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$'
+FilterVPS: &FilterVPS '^(?=.*((?i)0x)).*$'
+
+Select: &Select {type: select, url: 'http://connectivitycheck.platform.hicloud.com/generate_204', disable-udp: false, hidden: false, include-all: true}
+
+proxy-groups: 
+  - {name: 🚀 节点选择, type: select, proxies: [🔥 手动切换, ♻️ 自动选择, DIRECT]}
+  - {name: 🔥 手动切换, type: select, include-all: true}
+  - {name: ♻️ 自动选择, type: url-test, include-all: true, tolerance: 10}
+  - {name: 🅱️ Crypto, <<: *Select, filter: *FilterCrypto}
+  - {name: 🎯 全球直连, type: select, proxies: [DIRECT]}
+  - {name: 🆎 AdBlock, type: select, proxies: [REJECT, DIRECT]}
+  - {name: 🇬 Google, type: select, proxies: [🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 🤖 Chat服务, type: select, proxies: [🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name:  苹果服务, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 📹 油管视频, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 👨‍💻‍ Github, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 📺 巴哈姆特, type: select, proxies: [🇨🇳 台湾节点, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: Ⓜ️ 微软云盘, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: Ⓜ️ 微软服务, type: select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 💬 自由消息, type: select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 🐔 落地鸡, <<: *Select, filter: *FilterVPS}
+  - {name: 🇺🇲 美国节点, <<: *Select, filter: *FilterUS}
+  - {name: 🇨🇳 台湾节点, <<: *Select, filter: *FilterTW}
+
+rules:
+  - RULE-SET,myproxy,🚀 节点选择
+  - RULE-SET,crypto,🅱️ Crypto
+  - RULE-SET,binance,🅱️ Crypto
+  - RULE-SET,mybinance,🅱️ Crypto
+  - RULE-SET,mycrypto,🅱️ Crypto
+  - RULE-SET,directprocess,🎯 全球直连
+  - RULE-SET,mydirect,🎯 全球直连
+  - PROCESS-NAME,android.uid.system,🇬 Google
+  - PROCESS-NAME,com.google.uid.shared,🇬 Google
+  - PROCESS-NAME,com.android.vending,🇬 Google
+  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com,🇬 Google
+  - DOMAIN-SUFFIX,android.googleapis.com,🇬 Google
+  - DOMAIN-SUFFIX,android.clients.google.com,🇬 Google
+  - DOMAIN-SUFFIX,play.googleapis.com,🇬 Google
+  - DOMAIN-SUFFIX,services.googleapis.cn,🇬 Google
+  - DOMAIN-SUFFIX,voice.google.com,🇬 Google
+  - DOMAIN-SUFFIX,dl.google.com,🇬 Google
+  - IP-CIDR,224.0.0.0/4,🎯 全球直连,no-resolve
+  - IP-CIDR,103.41.167.0/24,🎯 全球直连,no-resolve
+  - IP-CIDR,74.48.160.148/32,🎯 全球直连,no-resolve
+  - RULE-SET,openai,🤖 Chat服务
+  - RULE-SET,myopenai,🤖 Chat服务
+  - RULE-SET,applications,🎯 全球直连
+  - DOMAIN,clash.razord.top,🎯 全球直连
+  - DOMAIN,yacd.haishan.me,🎯 全球直连
+  - RULE-SET,private,🎯 全球直连
+  - RULE-SET,icloud, 苹果服务
+  - RULE-SET,apple, 苹果服务
+  - RULE-SET,appleall, 苹果服务
+  - GEOSITE,apple-cn, 苹果服务
+  - RULE-SET,youtube,📹 油管视频
+  - RULE-SET,netflix,📹 油管视频
+  - GEOSITE,youtube,📹 油管视频
+  - GEOIP,netflix,📹 油管视频
+  - RULE-SET,googleFCM,🇬 Google
+  - RULE-SET,google,🇬 Google
+  - GEOSITE,google,🇬 Google
+  - GEOIP,google,🇬 Google
+  - GEOSITE,steam@cn,🎯 全球直连
+  - GEOSITE,category-games@cn,🎯 全球直连
+  - GEOSITE,tracker,🎯 全球直连
+  - RULE-SET,reject,🆎 AdBlock
+  - GEOSITE,category-ads-all,🆎 AdBlock
+  - RULE-SET,bahamut,📺 巴哈姆特
+  - GEOSITE,bahamut,📺 巴哈姆特
+  - RULE-SET,github,👨‍💻‍ Github
+  - GEOSITE,github,👨‍💻‍ Github
+  - RULE-SET,onedrive,Ⓜ️ 微软云盘
+  - GEOSITE,onedrive,Ⓜ️ 微软云盘
+  - RULE-SET,microsoft,Ⓜ️ 微软服务
+  - RULE-SET,telegramcidr,💬 自由消息,no-resolve
+  - RULE-SET,twitter,💬 自由消息
+  - RULE-SET,discord,💬 自由消息
+  - RULE-SET,tiktok,💬 自由消息
+  - GEOSITE,telegram,💬 自由消息
+  - GEOSITE,twitter,💬 自由消息
+  - GEOIP,twitter,💬 自由消息
+  - RULE-SET,gfw,🚀 节点选择
+  - RULE-SET,proxy,🚀 节点选择
+  - RULE-SET,global,🚀 节点选择
+  - RULE-SET,proxyclassical,🚀 节点选择
+  - RULE-SET,china,🎯 全球直连
+  - RULE-SET,chinax,🎯 全球直连
+  - RULE-SET,chinatest,🎯 全球直连
+  - RULE-SET,direct,🎯 全球直连
+  - RULE-SET,lancidr,🎯 全球直连,no-resolve
+  - RULE-SET,cncidr,🎯 全球直连,no-resolve
+  - RULE-SET,chinaips,🎯 全球直连,no-resolve
+  - GEOIP,LAN,🎯 全球直连,no-resolve
+  - GEOIP,CN,🎯 全球直连,no-resolve
+  - MATCH,🎯 全球直连
