--- a/GeneralClashConfig_mac.yaml
+++ b/GeneralClashConfig_mac.yaml
@@ -106,16 +106,16 @@ dns:
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "rule-set:direct,mydirect,china,chinax,chinatest": 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
       - https://1.12.12.12/dns-query
     "rule-set:github,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
@@ -124,10 +124,11 @@ dns:
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://223.5.5.5/dns-query#h3=true
+      - quic://223.5.5.5:853
+      - https://1.12.12.12/dns-query
   nameserver: 
-    - https://223.5.5.5/dns-query#h3=true
-    - https://1.12.12.12/dns-query
+      - quic://223.5.5.5:853
+      - https://1.12.12.12/dns-query
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
     - "+.*"
